# mlarena

./: .gitignore  .mcp-cdp-todoit.json  .mcp.json  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
melting-point/: README.md
melting-point/code/models/: baseline_autogluon.py
melting-point/code/utils/: submission.py
melting-point/submissions/: submissions.json
playground-series-s5e11/code/models/: baseline_autogluon.py
playground-series-s5e11/code/utils/: config.py  submission.py
playground-series-s5e11/experiments/: 20251117_094411_autogluon-best_quality.py
playground-series-s5e11/submissions/: submissions.json
projects/kaggle/melting-point/: .gitignore
projects/kaggle/playground-series-s4e10/: playground_s4e10_metadata.json
projects/kaggle/playground-series-s4e12/: 20241229052713-medium_quality-rmse_-1.05392-frac_1.0-log-time=600.params  runfile000.py  runfile001.py  train.html  (+21 more)
scripts/: README.md  ai_helper.py  autogluon_runner.py  experiment_manager.py  feature_eda.py  kaggle_scraper.py  ml_runner.py  submission_workflow.py  submissions_tracker.py
src/agents/: algorithm_selector.yaml  code_generator.yaml  data_explorer.yaml  experiment_tracker.yaml  feature_engineer.yaml  orchestrator.yaml  resource_manager.yaml  solution_space_explorer.yaml  submission.yaml  validator.yaml  web_researcher.yaml
src/kaggle_tools/: __init__.py  config_models.py  submission.py
tools/: README_KAGGLE.md  autogluon_runner.py  experiment_logger.py  experiment_manager.py  kaggle_scraper.py  submission_utils.py  submission_workflow.py  submissions_tracker.py
(+179 files in other folders)
